--- a/templates/standard/cm.yaml
+++ b/templates/standard/cm.yaml
@@ -33,6 +33,10 @@ parameters:
   log_mountpoint:
     type: string
     default: /dev/vdb
+  signal_transport:
+    type: string
+  software_config_transport:
+    type: string
 
 resources:
   sec_group:
@@ -72,12 +76,12 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
             $roles$: 'cloudera_manager platform_testing_cdh mysql_connector'
-            $cloudera_role$: 'CM'            
+            $cloudera_role$: 'CM'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -106,7 +110,7 @@ resources:
       key_name: { get_param: KeyName }
       networks:
         - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
