--- a/templates/standard/dn.yaml
+++ b/templates/standard/dn.yaml
@@ -44,6 +44,10 @@ parameters:
   log_mountpoint:
     type: string
     default: /dev/vdb
+  signal_transport:
+    type: string
+  software_config_transport:
+    type: string
 
 
 resources:
@@ -66,12 +70,12 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $cloudera_role$: 'DATANODE'                
+            $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ volume_attachment, logvolume_attachment ]
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -86,7 +90,7 @@ resources:
       key_name: { get_param: KeyName }
       networks: [{ network: {get_param: PrivateNet}}]
       security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
-      software_config_transport: POLL_TEMP_URL
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
