--- a/templates/standard/tools.yaml
+++ b/templates/standard/tools.yaml
@@ -32,6 +32,10 @@ parameters:
     default: standard
   pnda_secgroup:
     type: string
+  signal_transport:
+    type: string
+  software_config_transport:
+    type: string
 
 
 resources:
@@ -50,14 +54,14 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
-            $flavor$: { get_param: pnda_flavor }         
+            $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $roles$: 'kafka_manager platform_testing_general elk'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -72,7 +76,7 @@ resources:
       key_name: { get_param: KeyName }
       networks:
         - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
