software config signalling mechanism is now parameterizable

--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -56,7 +56,7 @@ parameters:
     description: NTP servers
     type: string
     default: ''
-    
+
   keystone_user:
     type: string
   keystone_password:
@@ -212,7 +212,7 @@ resources:
   deploy_install:
         type: OS::Heat::SoftwareDeployment
         properties:
-          signal_transport: TEMP_URL_SIGNAL
+          signal_transport: { get_param: signal_transport }
           config:
             get_resource: install_config
           server:
@@ -235,7 +235,7 @@ resources:
         type: OS::Heat::SoftwareDeployment
         depends_on: [deploy_install,pnda_cluster]
         properties:
-          signal_transport: TEMP_URL_SIGNAL
+          signal_transport: { get_param: signal_transport }
           config:
             get_resource: highstate_config
           server:
@@ -262,7 +262,7 @@ resources:
         type: OS::Heat::SoftwareDeployment
         depends_on: deploy_highstate
         properties:
-          signal_transport: TEMP_URL_SIGNAL
+          signal_transport: { get_param: signal_transport }
           config:
             get_resource: orchestrate_config
           server:
@@ -292,7 +292,7 @@ resources:
         type: OS::Heat::SoftwareDeployment
         depends_on: [deploy_highstate,deploy_orchestrate,pnda_cluster]
         properties:
-          signal_transport: TEMP_URL_SIGNAL
+          signal_transport: { get_param: signal_transport }
           config:
             get_resource: expand_config
           server:
