--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -36,6 +36,10 @@ parameters:
   log_mountpoint:
     type: string
     default: /dev/vdb
+  signal_transport:
+    type: string
+  software_config_transport:
+    type: string
 
 resources:
   sec_group:
@@ -78,7 +82,7 @@ resources:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -115,7 +119,7 @@ resources:
       networks: [{ network: {get_param: PrivateNet}}]
       security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
 
-      software_config_transport: POLL_TEMP_URL
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
