--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -47,7 +47,7 @@ parameter_defaults:
   #package_repository_sshfs_user: 'cloud-user'
   #package_repository_sshfs_host: '127.0.0.1'
   #package_repository_sshfs_path: '/mnt/packages'
-  #package_repository_sshfs_key: 'pr_key'
+  #package_repository_sshfs_key: pr_key
 
   # AWS configuration
   #S3_ACCESS_KEY_ID=xxxx
