--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -43,7 +43,7 @@ parameter_defaults:
 
   # package repository
   package_repository_fs_type: 'swift'
-  #package_repository_fs_location_path: '/opt/packages'
+  #package_repository_fs_location_path: '/mnt/packages'
   #package_repository_sshfs_user: 'cloud-user'
   #package_repository_sshfs_host: '127.0.0.1'
   #package_repository_sshfs_path: '/mnt/packages'
