--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -78,6 +78,7 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
             $volume_pr$: { get_param: pr_mountpoint }
+            $package_repository_fs_location_path$: { get_param: package_repository_fs_location_path }
             $roles$: 'cloudera_edge console_frontend console_backend_data_logger console_backend_data_manager graphite gobblin deployment_manager package_repository data_service impala-shell yarn-gateway hbase_opentsdb_tables hdfs_cleaner master_dataset'
             $cloudera_role$: 'EDGE'
 
