Move to jinja2 templates
Heat stack templates are now generated from jinjia2 templates. This
allows to conditionally create some of the resources. Currently
supported conditions:
- create_network == 1 will create the private network and dependent
resources
- create_volumes == 1 will create the cinder volumes required to store
logs and hdfs data

--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -96,8 +96,15 @@ parameters:
     default: ''
     description: |
       uri to the platform-salt upstream git repository
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 resources:
+{%if create_network is equalto 1 %}
   Key:
     type: OS::Nova::KeyPair
     properties:
@@ -181,6 +188,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_resource: private_subnet }
       security_groups: [{ get_resource: saltmaster_sec_group }, { get_resource: PndaSecGroup }]
+{% endif %}
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -302,10 +310,12 @@ resources:
             deployment_id: { get_param: DeploymentID }
 
 outputs:
+{%if create_network is equalto 1 %}
   private_key:
     value: { get_attr: [Key, private_key]}
     description: |
       The dynamically created keypair's private key value
+{% endif %}
   DeploymentID:
     value: { get_param: DeploymentID }
     description: |
