--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -247,7 +247,9 @@ resources:
             $package_repository_sshfs_host$: { get_param: package_repository_sshfs_host }
             $package_repository_sshfs_path$: { get_param: package_repository_sshfs_path }
             $package_repository_sshfs_key$: { get_param: package_repository_sshfs_key }
+{%if package_repository_fs_type == 'sshfs' %}
             $package_repository_sshfs_key_file$: { get_file: pr_key }
+{% endif %}
             $S3_ACCESS_KEY_ID$: { get_param: S3_ACCESS_KEY_ID }
             $S3_SECRET_ACCESS_KEY$: { get_param: S3_SECRET_ACCESS_KEY }
             $AWS_REGION$: { get_param: AWS_REGION }
