--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -56,10 +56,6 @@ parameters:
     description: NTP servers
     type: string
     default: ''
-  package_repository_fs_type:
-    description: Package repository FS type
-    type: string
-    default: ''
   package_repository_fs_location_path:
     description: Package repository FS location path
     type: string
@@ -241,7 +237,7 @@ resources:
             $cloudera_mirror$: { get_param: ClouderaParcelsMirror }
             $anaconda_mirror$: { get_param: AnacondaParcelsMirror }
             $ntp_servers$: { get_param: NtpServers }
-            $package_repository_fs_type$ : { get_param: package_repository_fs_type }
+            $package_repository_fs_type$ : {{ package_repository_fs_type }}
             $package_repository_fs_location_path$: { get_param: package_repository_fs_location_path }
             $package_repository_sshfs_user$: { get_param: package_repository_sshfs_user }
             $package_repository_sshfs_host$: { get_param: package_repository_sshfs_host }
