Added comments to the yaml templates
PNDA-2353

--- a/templates/standard/bastion.yaml
+++ b/templates/standard/bastion.yaml
@@ -1,3 +1,6 @@
+# Definition for the bastion instance type
+# Specifies which bootstrap script to run to set up this instance type
+
 heat_template_version: 2014-10-16
 
 parameters:
