--- a/templates/pico/instance_flavors.yaml
+++ b/templates/pico/instance_flavors.yaml
@@ -1,3 +1,5 @@
+# instance_flavors.yaml contains the default instance type for each
+# PNDA instance type
 parameter_defaults:
   Manager1Flavor: pico-mgr
   EdgeFlavor: pico-edge
