--- a/templates/standard/pnda_cluster.yaml
+++ b/templates/standard/pnda_cluster.yaml
@@ -1,3 +1,11 @@
+# pnda_cluster.yaml defines the instances to create for this flavor of PNDA
+# The resource_registry.yaml file defines which yaml template to apply to
+# each instance type, and these specific yaml files configure the
+# instance as required for that type of node.
+
+# It is processed as a jinja2 template with the following parameters:
+#   - create_network: 0|1. Set to 1 to create network related resources
+
 heat_template_version: 2014-10-16
 
 parameters:
