--- a/templates/standard/resource_registry.yaml
+++ b/templates/standard/resource_registry.yaml
@@ -1,3 +1,5 @@
+# resource_registry.yaml contains the rules for which yaml file is
+# used to create each type of PNDA instance
 resource_registry:
   OS::Pnda::cluster: pnda_cluster.yaml
   OS::Pnda::bastion: bastion.yaml
