Updates to volume sizes
pico log volumes now default to 10GB and the bastion and saltmaster use
dedicated pico instance flavors with smaller disks.

PNDA-2386

--- a/templates/pico/instance_flavors.yaml
+++ b/templates/pico/instance_flavors.yaml
@@ -5,6 +5,7 @@ parameter_defaults:
   EdgeFlavor: pico-edge
   KafkaFlavor: pico-kafka
   DatanodeFlavor: pico-dn
-  BastionFlavor: pnda-micro
+  BastionFlavor: pico-bastion
+  SaltmasterFlavor: pico-saltmaster
   DatanodeVolumeSize: 35
   PndaFlavor: pico
