--- a/templates/standard/cm.yaml
+++ b/templates/standard/cm.yaml
@@ -79,8 +79,8 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'cloudera_manager,platform_testing_cdh,mysql_connector'
-            $cloudera_role$: 'CM,pnda_restart'
+            $roles$: 'cloudera_manager,platform_testing_cdh,mysql_connector,pnda_restart'
+            $cloudera_role$: 'CM'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
