--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -37,12 +37,6 @@ parameters:
   logvolume_size:
     type: number
     default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
-  pr_mountpoint:
-    type: string
-    default: /dev/vdc
   prvolume_size:
     type: number
     default: 10
@@ -88,8 +82,8 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
-            $volume_pr$: { get_param: pr_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
+            $pr_volume_id$: { get_resource: prvolume }            
             $package_repository_fs_location_path$: { get_param: package_repository_fs_location_path }
             $roles$: 'cloudera_edge,console_frontend,console_backend_data_logger,console_backend_data_manager,graphite,gobblin,deployment_manager,package_repository,data_service,impala-shell,yarn-gateway,hbase_opentsdb_tables,hdfs_cleaner,master_dataset'
             $cloudera_role$: 'EDGE'
@@ -126,14 +120,12 @@ resources:
     properties:
       volume_id: { get_resource: prvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: pr_mountpoint }
 
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
 
   server:
