--- a/templates/standard/kafka.yaml
+++ b/templates/standard/kafka.yaml
@@ -39,9 +39,6 @@ parameters:
   logvolume_size:
     type: number
     default: 250
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
   signal_transport:
     type: string
   software_config_transport:
@@ -67,7 +64,7 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $brokerid$: { get_param: NodeIndex}
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
             $roles$: 'kafka'
             $cloudera_role$: ''
   install_deployment:
@@ -91,7 +88,6 @@ resources:
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
 
   server:
