--- a/templates/standard/logserver.yaml
+++ b/templates/standard/logserver.yaml
@@ -34,9 +34,6 @@ parameters:
   logvolume_size:
     type: number
     default: 500
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
   signal_transport:
     type: string
   software_config_transport:
@@ -78,7 +75,7 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
             $roles$: 'elk,logserver,kibana_dashboard'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
@@ -101,7 +98,6 @@ resources:
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
   server:
     type: OS::Nova::Server
