This commit adds Anti Affinity hint to the nova scheduler.
Two types of Anti Affinity groups are being added:

1) Conditional Anti Affinity scheduler policy.

The conditional groups that have been added are:
- Kafka nodes for pnda
- Zookeeper nodes for pnda (Kafka)
- Data nodes for Hadoop

The condition for an AA group being defined for nodes is:
  if (nodes > 1 and hypervisor_count >= nodes)

If this condition is met an AA group will be created to hint the nova
scheduler and added during the server instantiation.

2) Fixed Anti Affinity scheduler policy.

Wherever there is redundancy for high availability of services, the anti
affinity policy should be enforced to avoid having those redundant
services relying on the same server.

VM                  MGR1    MGR2    MGR3    MGR4    EDGE    CM
--------------------------------------------------------------
oozie-s                                     x
zk-s                x       x               x
yarn-jh                                     x
master              x       x
hue-server                                  x
hdfs-httpfs                         x
hbase-restserver                    x
hbase-thriftserver                  x
hive-metastore                      x
hive-server                         x
yarn-rm             x       x
hdfs-nn             x       x
hdfs-jn             x       x               x
hbase-gw                                            x       x
--------------------------------------------------------------
AA Group            G1      G1              G1

The resulting services with an 'x' in MGR1/2/4 are considered HA service
which require anti-affinity.

- For defining G1, using the HzkAAGroup will sufficient the ensure
  anti-affinity of zk-s, master, yarn-rm, hdfs-nn and hdfs-jn spread
  over the MGR1, MGR2 and MGR4 VM's.

--- a/templates/standard/mgr4.yaml
+++ b/templates/standard/mgr4.yaml
@@ -38,6 +38,8 @@ parameters:
     type: string
   software_config_transport:
     type: string
+  scheduler_group_hint:
+    type: string
 
 resources:
   sec_group:
@@ -110,7 +112,8 @@ resources:
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
-
+      scheduler_hints: 
+        group: { get_param: scheduler_group_hint}
 
 outputs:
   server_resource:
