--- a/templates/standard/cm.yaml
+++ b/templates/standard/cm.yaml
@@ -8,7 +8,7 @@ parameters:
   Flavor:
     description: Flavor of the cloudera manager server
     type: string
-    default: m1.xlarge
+    default: ec2.m3.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
