--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -8,7 +8,7 @@ parameters:
   Flavor:
     description: Flavor of the edge server
     type: string
-    default: m1.xlarge
+    default: ec2.t2.medium
   KeyName:
     description: Name of an existing ssh keypair
     type: string
