--- a/templates/standard/mgr1.yaml
+++ b/templates/standard/mgr1.yaml
@@ -40,6 +40,10 @@ parameters:
     type: string
   scheduler_group_hint:
     type: string
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
 
 resources:
   sec_group:
@@ -70,6 +74,7 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
+            $pnda_mirror$: { get_param: PndaMirror }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $flavor$: { get_param: pnda_flavor }
