--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -119,7 +119,7 @@ parameter_defaults:
   # package_repository_fs_location_path: Path to local folder on the package repository service server that contains 
   # application packages
   #  
-  #package_repository_fs_location_path: '/mnt/packages'
+  package_repository_fs_location_path: '/mnt/packages'
   
   #
   # package_repository_sshfs_user: Username to use when logging in to the sshfs repo
