Add a pre-config that logs all new non-local ip connections.
A pre-config file can be enabled by defining a new type in the stack
environment file and an associating it with a yaml definition.
The environment will then overwrite the default config that is set to
OS::Heat::None.
All template files have been updated to heat_template_version:
2015-04-30 to enable overwriting the stack_id of a stack during creation
time.

--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -165,3 +165,10 @@ parameter_defaults:
   #
   #hypervisor_count: 30
 
+resource_registry:
+  #
+  # OS::Pnda::preConfig: the resource definition of a pre configuration file
+  # that will be run prior all the other PNDA configuration files.
+  # Example: To enable the ip tracking config script uncomment the next line.
+  #OS::Pnda::preConfig : iptracker.yaml
+  #OS::Pnda::preConfig : iprejecter.yaml
