--- a/templates/standard/bastion.yaml
+++ b/templates/standard/bastion.yaml
@@ -1,7 +1,7 @@
 # Definition for the bastion instance type
 # Specifies which bootstrap script to run to set up this instance type
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
@@ -43,6 +43,8 @@ parameters:
     description: URL of a mirror for operating system package download
     type: string
     default: ''
+  pre_config:
+    type: string
 
 resources:
   sec_group:
@@ -91,16 +93,6 @@ resources:
             $keyname$: { get_param: 'OS::stack_name' }
             $private_key$: { get_param: private_key }
             $pnda_cluster$: { get_param: cluster_name }
-  install_deployment:
-    type: OS::Heat::SoftwareDeployment
-    depends_on: bastion_deployment
-    properties:
-      signal_transport: { get_param: signal_transport }
-      config:
-        get_resource: install_config
-      server:
-        get_resource: server
-
   bastion_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -111,14 +103,15 @@ resources:
           params:
             $private_key$: { get_param: private_key }
             $keyname$: { get_param: 'OS::stack_name' }
-  bastion_deployment:
-    type: OS::Heat::SoftwareDeployment
+
+  server_init:
+    type: OS::Heat::MultipartMime
     properties:
-      signal_transport: { get_param: signal_transport }
-      config:
-        get_resource: bastion_config
-      server:
-        get_resource: server
+      parts:
+      - config: {get_param: pre_config}
+      - config: {get_resource: install_config}
+      - config: {get_resource: bastion_config}
+
   server:
     type: OS::Nova::Server
     depends_on: floatingIP
@@ -131,6 +124,7 @@ resources:
         - port: { get_resource: port }
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: server_init}
       config_drive: True
 
 outputs:
