--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -2,7 +2,7 @@
 # Specifies which bootstrap script to run to set up this instance type and which roles
 # to apply to this instance type
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
@@ -54,6 +54,9 @@ parameters:
     type: string
   PndaMirror:
     description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  pre_config:
     type: string
 
 resources:
@@ -148,6 +151,7 @@ resources:
 
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: { get_param: pre_config }
       config_drive: True
 
 outputs:
