--- a/templates/standard/resource_registry.yaml
+++ b/templates/standard/resource_registry.yaml
@@ -16,3 +16,4 @@ resource_registry:
   OS::Pnda::manager4: mgr4.yaml
   OS::Pnda::jupyter: jupyter.yaml
   OS::Pnda::opentsdb: opentsdb.yaml
+  OS::Pnda::preConfig : OS::Heat::None
