--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -20,6 +20,10 @@ parameters:
     type: string
     description: default image for pnda servers
     default: ubuntu1404
+  image_id_saltmaster:
+    type: string
+    description: default image for pnda saltmaster
+    default: ubuntu1404
   public_net:
     type: string
     description: >
