Add functionality to simulate offline deployment and support pico flavor
Adds a resource definition for rejecting all non-link-local connections.
Make this functionality available to pico flavor too as this flavor is
popular for development.

--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -168,7 +168,9 @@ parameter_defaults:
 resource_registry:
   #
   # OS::Pnda::preConfig: the resource definition of a pre configuration file
-  # that will be run prior all the other PNDA configuration files.
-  # Example: To enable the ip tracking config script uncomment the next line.
+  # that will be run prior to all the other PNDA configuration files.
+  # Examples: 
+  # To enable the ip tracking config script uncomment the next line.
   #OS::Pnda::preConfig : iptracker.yaml
+  # To enable the ip rejecting config script uncomment the next line.
   #OS::Pnda::preConfig : iprejecter.yaml
