--- a/templates/pico/resource_registry.yaml
+++ b/templates/pico/resource_registry.yaml
@@ -7,3 +7,4 @@ resource_registry:
   OS::Pnda::kafka: kafka.yaml
   OS::Pnda::edge: edge.yaml
   OS::Pnda::manager1: mgr1.yaml
+  OS::Pnda::preConfig : OS::Heat::None
