--- a/templates/shared/iprejecter.yaml
+++ b/templates/shared/iprejecter.yaml
@@ -1,4 +1,4 @@
-# Definition for the iptracker instance type
+# Definition for the iprejecter instance type
 # Specifies which the script to run to track ip connections on an instance
 
 heat_template_version: 2015-04-30
@@ -16,16 +16,16 @@ parameters:
     type: string
 
 resources:
-  iptracker_config:
+  iprejecter_config:
     type: OS::Heat::SoftwareConfig
     properties:
       config: 
         str_replace:
-          template: { get_file: scripts/iptracker.sh }
+          template: { get_file: scripts/iprejecter.sh }
           params: 
             $pnda_mirror$: { get_param: PndaMirror }
             $ntp_servers$: { get_param: NtpServers }
             $keystone_auth_url$: { get_param: keystone_auth_url }
 outputs:
   OS::stack_id:
-    value: { get_resource: iptracker_config }
+    value: { get_resource: iprejecter_config }
