--- a/templates/standard/pnda.yaml
+++ b/templates/standard/pnda.yaml
@@ -96,11 +96,25 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  NtpServers:
+    description: NTP servers
+    type: string
+    default: ''
+  name_servers:
+    description: List of name name servers
+    type: comma_delimited_list
 
 resources:
-
   pre_config:
     type: OS::Pnda::preConfig
+    properties:
+      PndaMirror: { get_param: PndaMirror }
+      NtpServers: { get_param: NtpServers }
+      keystone_auth_url: { get_param: keystone_auth_url }
 
   pnda_cluster:
     type: OS::Pnda::cluster
