--- a/templates/shared/iprejecter.yaml
+++ b/templates/shared/iprejecter.yaml
@@ -14,6 +14,16 @@ parameters:
     default: ''
   keystone_auth_url:
     type: string
+  platform_git_repo_uri:
+    type: string
+    default: ''
+    description: |
+      uri to the platform-salt upstream git repository
+  platform_uri:
+    type: string
+    default: ''
+    description: |
+      Uri to retrieve a platform-salt release zip file
 
 resources:
   iprejecter_config:
@@ -26,6 +36,8 @@ resources:
             $pnda_mirror$: { get_param: PndaMirror }
             $ntp_servers$: { get_param: NtpServers }
             $keystone_auth_url$: { get_param: keystone_auth_url }
+            $platform_git_repo_uri$: { get_param: platform_git_repo_uri }
+            $platform_uri$: { get_param: platform_uri }
 outputs:
   OS::stack_id:
     value: { get_resource: iprejecter_config }
