--- a/templates/standard/bastion.yaml
+++ b/templates/standard/bastion.yaml
@@ -43,8 +43,6 @@ parameters:
     description: URL of a mirror for operating system package download
     type: string
     default: ''
-  pre_config:
-    type: string
 
 resources:
   sec_group:
@@ -93,6 +91,16 @@ resources:
             $keyname$: { get_param: 'OS::stack_name' }
             $private_key$: { get_param: private_key }
             $pnda_cluster$: { get_param: cluster_name }
+  install_deployment:
+    type: OS::Heat::SoftwareDeployment
+    depends_on: bastion_deployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_resource: install_config
+      server:
+        get_resource: server
+
   bastion_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -103,15 +111,14 @@ resources:
           params:
             $private_key$: { get_param: private_key }
             $keyname$: { get_param: 'OS::stack_name' }
-
-  server_init:
-    type: OS::Heat::MultipartMime
+  bastion_deployment:
+    type: OS::Heat::SoftwareDeployment
     properties:
-      parts:
-      - config: {get_param: pre_config}
-      - config: {get_resource: install_config}
-      - config: {get_resource: bastion_config}
-
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_resource: bastion_config
+      server:
+        get_resource: server
   server:
     type: OS::Nova::Server
     depends_on: floatingIP
@@ -124,7 +131,6 @@ resources:
         - port: { get_resource: port }
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
-      user_data: {get_resource: server_init}
       config_drive: True
 
 outputs:
