--- a/templates/standard/pnda.yaml
+++ b/templates/standard/pnda.yaml
@@ -107,6 +107,11 @@ parameters:
   name_servers:
     description: List of name name servers
     type: comma_delimited_list
+  platform_git_repo_uri:
+    type: string
+    default: ''
+    description: |
+      uri to the platform-salt upstream git repository
 
 resources:
   pre_config:
@@ -115,6 +120,8 @@ resources:
       PndaMirror: { get_param: PndaMirror }
       NtpServers: { get_param: NtpServers }
       keystone_auth_url: { get_param: keystone_auth_url }
+      platform_git_repo_uri: { get_param: platform_git_repo_uri }
+      platform_uri: { get_param: platform_uri } 
 
   pnda_cluster:
     type: OS::Pnda::cluster
