--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -227,6 +227,14 @@ resources:
       security_groups: [{ get_resource: saltmaster_sec_group }, { get_resource: PndaSecGroup }]
 {% endif %}
 
+  pre_config:
+    type: OS::Pnda::preConfig
+    properties:
+      PndaMirror: { get_param: PndaMirror }
+      NtpServers: { get_param: NtpServers }
+      keystone_auth_url: { get_param: keystone_auth_url }
+      platform_git_repo_uri: { get_param: platform_git_repo_uri }
+      platform_uri: { get_param: platform_uri } 
  
   # A SoftwareConfig resource contains all the parameters used when provisioning PNDA
   install_config:
